# life-copilot

./: .gitignore  Cargo.toml  README.md  eslint.config.js  oxlint.config.ts  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
app/: index.html  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  main.tsx
app/src/components/: AppShell.module.css  AppShell.tsx
app/src/lib/: event-bus.ts  plugin-context.ts  plugin-engine.tsx  slot-registry.tsx
app/src/plugins/: focus-session.plugin.ts  todo-board.plugin.ts
app/src/plugins/brain-dump/: BrainDumpPanel.tsx  BrainDumpSidebarNav.tsx
app/src/plugins/focus-session/: FocusTimer.tsx
app/src/plugins/routines/: RoutinesPanel.tsx
app/src/plugins/todo-board/: TodoBoardPanel.tsx
app/src/styles/: global.css
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: focus_session.rs  mod.rs  plugin_storage.rs  routines.rs  tasks.rs
src-tauri/src/db/: migrations.rs  mod.rs  pool.rs
src-tauri/src/db/migrations/: 0001_init.sql
src/components/: AppShell.tsx
src/lib/: plugin-loader.ts
src/plugins/: brain-dump.plugin.ts  focus-session.plugin.ts  routines.plugin.ts
src/plugins/routines/: RoutinesPanel.tsx  RoutinesSidebarNav.tsx
src/plugins/todo-board/: TodoBoardSidebarNav.tsx
website/: package.json  vite.config.ts
website/adapters/cloudflare-pages/: vite.config.ts
website/public/: _headers
website/src/: entry.cloudflare-pages.tsx  global.css  root.tsx
website/src/components/github/: github-issues.tsx  github-status.tsx
website/src/routes/: index.tsx
website/src/routes/docs/: index.mdx  layout.tsx
website/src/routes/docs/adhd-ux/: index.mdx
website/src/routes/docs/architecture/: index.mdx
website/src/routes/docs/database/: index.mdx
website/src/routes/docs/plugins/: index.mdx
website/src/routes/docs/roadmap/: index.mdx
website/src/routes/docs/tauri/: index.mdx
