[package]
name = "life-copilot"
version = "0.1.0"
description = "Life Copilot — ADHD-focused productivity app"
authors = []
edition = "2021"

[lib]
name = "life_copilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "life-copilot"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
ts-rs = { version = "10", features = ["chrono"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[features]
# `custom-protocol` makes Tauri serve the app from frontendDist instead of devUrl.
# It is included in `default` so that `cargo run` works out-of-the-box with the
# pre-built frontend in app/dist/. The Tauri CLI (`tauri dev`) automatically
# strips this feature when starting in watch/HMR mode, so hot-reload is unaffected.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
